--- a/.github/workflows/clash-sync.yml
+++ b/.github/workflows/clash-sync.yml
@@ -1,9 +1,9 @@
 name: Clash Subscription Auto Sync
 
-on:
-  # 定时执行：每5分钟
-  schedule:
-    - cron: '*/5 * * * *'
+# on:
+#   # 定时执行：每5分钟
+#   schedule:
+#     - cron: '*/5 * * * *'
   
   # 手动触发
   workflow_dispatch:
